# Kluock-Password-Manager

./: manage.py  pyproject.toml  requirements.txt  seeder.py
api/: serializers.py  urls.py  views.py
base/: models.py
base/migrations/: 0001_initial.py  0002_alter_credentials_password.py  0003_alter_credentials_website.py  0004_credentials_updated_at.py
kluock/: asgi.py  settings.py  urls.py  wsgi.py
